# chogori-opengauss

./: .gitignore  BuildOpenGauss.md  README.md  build-install.sh  configure  gsenv.sh
doc/: PLANNING.md  Questions.md  (+2 more)
src/gausskernel/storage/k2/: CMakeLists.txt  Makefile  config.cpp  config.h  error_reporting.cpp  error_reporting.h  fdw_handlers.cpp  fdw_handlers.h  k2_fdw--1.0.sql  k2_fdw.control  k2_fdw.cpp  k2_fdw.h  log.h  mot_fdw.cpp  parse.cpp  parse.h  session.cpp  session.h
src/gausskernel/storage/k2/common/: Makefile  endian.h  port.h  status.cc  status.h  stol_utils.h  transaction_error.h
src/gausskernel/storage/k2/common/type/: Makefile  decimal.cc  decimal.h  slice.cc  slice.h  varint.cc  varint.h
src/gausskernel/storage/k2/entities/: Makefile  entity_ids.cc  entity_ids.h  expr.cc  expr.h  index.cc  index.h  schema.cc  schema.h  table.cc  table.h  type.cc  type.h  types.cc  types.h  value.cc  value.h
src/gausskernel/storage/k2/pggate/: Makefile  k2_adapter.cc  k2_adapter.h  k2_gate.cc  k2_gate.h  k2_includes.h  k2_thread_pool.h  k2_txn.cc  k2_txn.h  pg_column.cc  pg_column.h  pg_ddl.cc  pg_ddl.h  pg_delete.h  pg_dml.cc  pg_dml.h  pg_dml_read.cc  pg_dml_read.h  pg_dml_write.cc  pg_dml_write.h  pg_gate_api.cc  pg_gate_api.h  pg_gate_impl.cc  pg_gate_impl.h  pg_gate_thread_local_vars.cc  pg_gate_thread_local_vars.h  pg_gate_typedefs.h  pg_insert.h  pg_memctx.cc  pg_memctx.h  pg_op.cc  pg_op.h  pg_op_api.cc  pg_op_api.h  pg_select.cc  pg_select.h  pg_session.cc  pg_session.h  pg_statement.h  pg_tabledesc.cc  (+6 more)
src/gausskernel/storage/k2/utf/: Makefile
(+340 files in other folders)
